Bug 124936 - Help->About LibreOffice dialog does not specify whether 32 or 64 bit is installed
Summary: Help->About LibreOffice dialog does not specify whether 32 or 64 bit is insta...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All Windows (All)
: medium minor
Assignee: Takeshi Abe
URL:
Whiteboard: target:6.3.0 target:6.2.5
Keywords: difficultyBeginner, easyHack, skillCpp, topicUI
Depends on:
Blocks: About-Dialog
  Show dependency treegraph
 
Reported: 2019-04-24 16:02 UTC by casa
Modified: 2019-06-02 13:17 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description casa 2019-04-24 16:02:04 UTC
Description:
On 64 bit (windows; but issue may also exist on linux/unix) either 32 or 64 bit versions of LibreOffice can be installed.  Once installed they generally run the same with no observable difference by the user.

If a person is looking to update/upgrade what is already installed (perhaps installed by a different person and thus unknown whether they installed 32 or 64), or simply determine what they have for information purposes, it is logical that they would go to the HELP->ABOUT LIBREOFFICE dialog which is available from all programs.  That dialog returns information such as this:
======
Version: 6.1.4.2
Build ID: 9d0f32d1f0b509096fd65e0d4bec26ddd1938fd3
CPU threads: 2; OS: Windows 10.0; UI render: default; 
Locale: en-US (en_US); Calc: CL
======
You will notice, however, that it does not specify whether 32 or 64 bit is installed on the machine.  Therefore, for example, if a person is trying to upgrade their machine/version (with a manual download from the website) they will not know or be able to determine whether to get the x82 or x86_64 download version.

PROBLEM: The about dialog (which is where this info should be shown) doesn't tell a user whether 32 or 64 bit version is installed.

SOLUTION: add text specifying whether 32 or 64 bit is present.

Steps to Reproduce:
1.Open HELP->ABOUT LIBREOFFICE dialog in any program
2.Try to figure out whether 32 or 64 bit version is installed. Can't
3.

Actual Results:
see above

Expected Results:
Dialog should tell user whether 32 or 64 bit version of program is installed on computer.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Oliver Brinzing 2019-04-24 16:55:39 UTC
I can't reproduce it in LO 6.1.6 x64:

Version: 6.1.6.1 (x64)
Build ID: 6008c19e488329dfd81fea1b4444c29eddaac14f
CPU threads: 4; OS: Windows 10.0; UI render: default; 
Locale: de-DE (de_DE); Calc:
Comment 2 Telesto 2019-04-24 19:12:17 UTC
Repro
Version: 5.4.0.3
Build ID: 7556cbc6811c9d992f4064ab9287069087d7f62c
CPU threads: 4; OS: Windows 6.2; UI render: default; 
Locale: nl-NL (nl_NL); Calc: CL

The about in a x64 build identifies itself as a x64 build. This is lacking for x32 build, which is a little confusing IMHO..
Comment 3 casa 2019-04-24 20:15:59 UTC
Ah...So, the absence of anything denotes 32bit (which is why my ABOUT was blank) and "(x64)" is only present in the 64 bit install.

Obviously (I agree) this is confusing and created the exact situation I encountered - I had an install I was trying to upgrade and couldn't determine what was already on the machine.

To a reasonable user, the absence of anything will be interpreted as 'unknown' as in "hey, what is installed here?".  A person would not know or expect that it means "32 bit" and that only 64 bit systems have any notation.

If not too difficult the 32 bit version should say "(x86)" at least.  (Although I don't think specifying instruction sets alone is as useful to the masses as spelling it out fully.  AKA: the notations should be: "32bit(x86)" and "64bit(x64)" in my opinion.  I've always felt the use of "x86" alone when it is really trying to say "32bit" can be confusing.
Comment 4 Heiko Tietze 2019-04-25 10:49:47 UTC
Obviously it's a Windows only issue https://opengrok.libreoffice.org/xref/core/cui/source/dialogs/about.cxx?r=dfc5acab#301 and I'm unsure that 32bit is still relevant at all.
Comment 5 Heiko Tietze 2019-04-25 11:08:29 UTC
Apparently there is no plan to retire the 32bit Windows build. What we can do is to a) add 32bit (code pointer _WIN32) or b) drop the 64bit info.

My take is a).
Comment 6 casa 2019-04-25 19:26:31 UTC
I don't quite understand the proposed solution, but if I can be highly simplistic (and with pseudocode), somewhere in either the compiler macros or running program there is a line (for the About dialog) that says:

if equal 64bit then print "(x64)" otherwise leave blank

can't it just be changed to:

if equal 64bit then print "(x64, 64bit)" otherwise print "(x86, 32bit)"

??

(I changed it somewhat because I always think using 'x86' for essentially trying to say '32bit' is a needless confusion and abbreviation in the world.  Computers for many are hard enough without forcing somebody's parent, for example, to mumble "I need to know if this is 32bit...what the heck does 'x86' mean?" and then have to go research it. )
Comment 7 casa 2019-04-25 21:16:09 UTC
SORRY. I missed the comment 2 above where the person already directly linked to the "about.cxx" with the clear compiler #ifdef section that adds " (x64)".

Simple enough to fix. However I don't know what (if any) compile switch exists for 'windows, but not 64bit'.  "if _WIN"?   "if _WIN32"?

(You can't use "if NOT _WIN64" because presumably there are more switches for osX, Linux, etc.)
Comment 8 casa 2019-04-25 21:18:43 UTC
Ugh. I need coffee.  Apologies for the excess replies.  The person in other comment already said the switch is "_WIN32".  So code change is obvious.
Comment 9 MM 2019-04-28 18:09:24 UTC
Why not change it to :

#ifdef _WIN64
  sVersion += " (x64)";
#elif _WIN32
  sVersion += " (x86)";
#endif

That sets it for windows and leaves linux / mac builds alone.
Comment 10 Takeshi Abe 2019-05-31 05:41:53 UTC
(In reply to MM from comment #9)
Uploaded a patch:
https://gerrit.libreoffice.org/#/c/73211/
Comment 11 Commit Notification 2019-05-31 09:30:02 UTC
Takeshi Abe committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/932c1bd99f4b99705c3948d0babaa1f4160f37c3%5E%21

tdf#124936 Show "(x86)" in About dialog on the 32-bit version

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2019-06-01 17:59:35 UTC
Takeshi Abe committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/df67a9ae9c1e9f3e21b1674deb4036f61eced05c%5E%21

tdf#124936 Show "(x86)" in About dialog on the 32-bit version

It will be available in 6.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Roman Kuznetsov 2019-06-02 13:17:11 UTC
verified in

Version: 6.4.0.0.alpha0+ (x86)
Build ID: 93477d1a963e38e3319013e43835a8ffef200972
CPU threads: 4; OS: Windows 6.1; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-06-02_10:16:52
Locale: ru-RU (ru_RU); UI-Language: en-US
Calc: threaded