tdf#124936 Show "(x86)" in About dialog on the 32-bit version

... installed on Windows.

Change-Id: I2a4d846265b69f0e46e4c711430689ce39d60fcd
Reviewed-on: https://gerrit.libreoffice.org/73211
Reviewed-by: Michael Stahl <Michael.Stahl@cib.de>
Tested-by: Michael Stahl <Michael.Stahl@cib.de>
(cherry picked from commit 932c1bd99f4b99705c3948d0babaa1f4160f37c3)